# multiuav_gui

./: .env  .eslintrc.js  .gitignore  .prettierrc  CMakeLists.txt  Drone2.md  LICENSE  README.md  Readme.md  StartGUI.bash  StartGUI.sh  compose.yaml  package.json  package.xml
client/: .prettierignore  index.html  package.json  vite.config.js
docker/: DockerFile  Dockerfile  Readme.md  add_to_entrypoint.sh  container.bat  containerWSL_run.sh  container_ros2.sh  container_run.sh  dockerSupervisor.sh  init_rosbridge.sh  init_roscore.sh  init_webrtc.sh  px4-noetic.sh  ros_entrypoint.sh
docs/: Autopilot-Px4.md  CameraStream.md  FlightPlans_demo_DQcw.yaml  FlightPlans_uav1 (copy).yaml  FlightPlans_uav1.yaml  FlightPlans_v1.yaml  HOWRUN.md  Offline-map.md  Oran_CW_2_delta.plan  Oran_CW_2_delta_KML (1).kml  Oran_path.kml  Simulation-PX4.md  UALDependencies.md  catec.md  drone2.md  guia_dji_gcs.md  guide_transfer_files.md  network.md  sftp.md
guides/: Activities.md  Autopilot-Px4.md  CameraStream.md  CameraStreamDji.md  HOWRUN.md  Offline-map.md  SDK-Dji_topics_service.md  Vtool.md  catec.md  documentacion api.md  dudas_gcs_guide.md  example-webrtc.html  gcs_guide.md  guia_dji_gcs.md  schemas.md  sftp.md  test-IREC.md  video transmision.md  vpn.md  wifi_confi.md
launch/: connect_uas.launch  simulate_muav.launch  simulate_uav.launch
missions/: -home-ubuntu18-catkin_ws-src-aerialcore_gcs-aerialcore_gui-missions-.txt  13_P_Wiris_video.waypoints  85mm_20malt_3ms_3_5mphoto_large.waypoints  AAmission_1.yaml  AAmission_1_yaw.yaml  ATLAS_TEST1_CW.plan  BBmission_OMICRON.yaml  (+57 more)
(+756 files in other folders)
