<?xml version="1.0"?>
<package>
  <name>aerialcore_gui</name>
  <version>0.0.0</version>
  <description>Gui package</description>

  <maintainer email="alesanpal@gmail.com">Alejandro S. Palma</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="alesanpal@gmail.com">Alejandro S. Palma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <exec_depend>std_msgs</exec_depend> -->

</package>
